frontend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: frontend
  labels:
    app: frontend
    maintainer: vikas
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend-pod
  template:
    metadata:
      labels:
        app: frontend-pod
    spec:
      containers:
        - name: frontend-container
          image: vikasprince/MERN-Frontend:latest  # Will be overridden in overlays
          ports:
            - containerPort: 80
      resources:
        limits:
          memory: "1Gi"
          cpu: "1"
        requests:
          memory: "500Mi"
          cpu: "500m"
      livenessProbe:
        httpGet:
          path: "/"
          port: 80
        initialDelaySeconds: 30
        periodSeconds: 5
      readinessProbe:
        httpGet:
          path: "/"
          port: 80
        initialDelaySeconds: 30
        periodSeconds: 5
