frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: frontend
spec:
  type: LoadBalancer
  selector:
    app: frontend-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
